[tool.poetry]
name = "mellow_strategy_sdk"
version = "0.3.1"
description = "Framework for creating new Uniswap V3 strategies"
readme = 'README.rst'
documentation = 'https://mellow-strategy-sdk.readthedocs.io/en/main/'

authors = [
    "Alex K <ak@mellow.finance>",
    "Alexander Nikolaev <alexandernikolaev@mellow.finance>",
    "David Prokhorov <davidprokhorov@mellow.finance>"
]
license = "MIT License"
homepage = 'https://mellow.finance/'
repository = 'https://github.com/mellow-finance/mellow-strategy-sdk'
packages = [
    {include = "mellow_sdk"}
]

[tool.poetry.dependencies]
python = "^3.7.13"
kaleido = "0.2.1"
pandas = "~1.3.5"
plotly = "^5.5.0"
PyYAML = "^3.13"
pyarrow = "^6.0.1"
boto3 = "^1.0.0"
polars = "0.13.17"
structlog = "^21.5.0"
python-binance = "^1.0.15"
requests = "~2.23.0"
six = "~1.15.0"
folium = "0.2.1"
arviz = "^0.12.0"

[tool.poetry.dev-dependencies]
parameterized = "^0.8.1"
sphinx-rtd-theme = "^1.0.0"
autodoc = "^0.5.0"
sphinx-autodocgen = "^1.3"
sphinxcontrib-napoleon = "^0.7"
myst-parser = "^0.17.0"
sphinx-autodoc-typehints = "^1.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
