[tool.poetry]
name = "mellow_strategy_sdk"
version = "0.3.2"
description = "Framework for creating new Uniswap V3 strategies"
readme = 'README.rst'
documentation = 'https://mellow-strategy-sdk.readthedocs.io/en/main/'

authors = [
    "Alex K <ak@mellow.finance>",
    "Alexander Nikolaev <alexandernikolaev@mellow.finance>",
    "David Prokhorov <davidprokhorov@mellow.finance>"
]
license = "MIT License"
homepage = 'https://mellow.finance/'
repository = 'https://github.com/mellow-finance/mellow-strategy-sdk'
packages = [
    {include = "mellow_sdk"}
]

[tool.poetry.dependencies]
python = "^3.7.13"
kaleido = "0.2.1"
pandas = "~1.3.5"
plotly = "^5.5.0"
PyYAML = "^3.13"
pyarrow = "^6.0.1"
boto3 = "^1.0.0"
polars = "0.13.17"
structlog = "^21.5.0"
python-binance = "^1.0.15"
six = "~1.15.0"
folium = "0.2.1"
arviz = "^0.12.0"

sphinx = {version = "^3", optional = true}
parameterized = {version="^0.8.1", optional = true}
sphinx-rtd-theme = {version="^1.0.0", optional = true}
autodoc = {version="^0.5.0", optional = true}
sphinx-autodocgen = {version="^1.3", optional = true}
sphinxcontrib-napoleon = {version="^0.7", optional = true}
myst-parser = {version="^0.17.0", optional = true}
sphinx-autodoc-typehints = {version="^1.17.0", optional = true}

[tool.poetry.extras]
docs = [
    "sphinx", "parameterized", "sphinx-rtd-theme", "autodoc",
    "sphinx-autodocgen", "sphinxcontrib-napoleon", "myst-parser",
    "sphinx-autodoc-typehints"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
